@@ -1,5 +1,7 @@
 Version 0.5.6: Not yet released
- * Manage who can open chests
+ * Allow access to 'mondo' command from console (limited use)
+ * Add ability to define the users who can access a MondoChest
+ * Add in optional protection on opening a chest
  * Add optional ability to find slaves 2 away horizontally too.
  * Fix minor bug with not removing chest if slaves_vertical_two was set
  * Initial testing on Bukkit 1.3.1
